--- a/portfolio.html
+++ b/portfolio.html
@@ -233,6 +233,19 @@
                     </li>
                 </ul>
             </div>
+            <div class="container-soc-subscribtion">
+                <h3 class="footer-subscription-title">Подпишитесь на рассылку</h3>
+                <form role="group" class="footer-subscription-form">
+                    <input class="footer-subscription-input" type="text" name="user-subscribtion" id="user-subscribtion" placeholder="E-mail">
+                    <button type="submit" name="user-subscribtion" id="user-subscribtion" class="footer-submit-button">Подписаться
+                        <svg class="footer-subscription-icon" width="24" height="24">
+                            <use 
+                                href="./images/symbol-defs.svg#icon-icon-send">
+                            </use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
     <script src="./js/modal.js"></script>
