--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
     <title>Studio</title> 
 </head>
 
@@ -63,50 +64,50 @@
         <section class="section">
             <div class="container">
             <!--Specialisation-->
-            <ul class="specialisations">
-                <li class="specialisation-item">
-                    <div class="specialisation-soc-container">
-                        <svg class="specialisation-soc-logo" width="70" height="70">
+            <ul class="specialisation">
+                <li class="specialisation__item">
+                    <div class="specialisation__container">
+                        <svg class="specialisation__logo" width="70" height="70">
                             <use
                                 href="./images/symbol-defs.svg#icon-antenna-1">
                             </use>
                         </svg>
                     </div>
-                    <h3 class="specialisation-title">Внимание к деталям</h3>
-                    <p class="specialisation-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <h3 class="specialisation__title">Внимание к деталям</h3>
+                    <p class="specialisation__text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li class="specialisation-item">
-                    <div class="specialisation-soc-container">
-                        <svg class="specialisation-soc-logo" width="70" height="70">
+                <li class="specialisation__item">
+                    <div class="specialisation__container">
+                        <svg class="specialisation__logo" width="70" height="70">
                             <use
                                 href="./images/symbol-defs.svg#icon-clock-1">
                             </use>
                         </svg>
                     </div>
-                    <h3 class="specialisation-title">Пунктуальность</h3>
-                    <p class="specialisation-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <h3 class="specialisation__title">Пунктуальность</h3>
+                    <p class="specialisation__text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li class="specialisation-item">
-                    <div class="specialisation-soc-container">
-                        <svg class="specialisation-soc-logo" width="70" height="70">
+                <li class="specialisation__item">
+                    <div class="specialisation__container">
+                        <svg class="specialisation__logo" width="70" height="70">
                             <use
                                 href="./images/symbol-defs.svg#icon-diagram-1">
                             </use>
                         </svg>
                     </div>
-                    <h3 class="specialisation-title">Планирование</h3>
-                    <p class="specialisation-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <h3 class="specialisation__title">Планирование</h3>
+                    <p class="specialisation__text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li class="specialisation-item">
-                    <div class="specialisation-soc-container">
-                        <svg class="specialisation-soc-logo" width="70" height="70">
+                <li class="specialisation__item">
+                    <div class="specialisation__container">
+                        <svg class="specialisation__logo" width="70" height="70">
                             <use
                                 href="./images/symbol-defs.svg#icon-astronaut-1">
                             </use>
                         </svg>
                     </div>
-                    <h3 class="specialisation-title">Современные технологии</h3>
-                    <p class="specialisation-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <h3 class="specialisation__title">Современные технологии</h3>
+                    <p class="specialisation__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
             </div>
@@ -140,46 +141,46 @@
         <!--Our-Team-->
         <section class="team-section section">
             <div class="container">
-            <h2 class="title-team">Наша команда</h2>
+            <h2 class="team-section__title">Наша команда</h2>
             <!--Igor-->
-            <ul class="person-list">
-                <li class="person">
-                    <img class="person-image" src="images/igor.jpg" width="270" alt="Фото пользователя">
-                    <div class="person-details">
-                    <p class="person-name">Игорь Демьяненко</p>
-                    <p class="person-description">Product Designer</p>
+            <ul class="team">
+                <li class="team__item">
+                    <img class="team__image" src="images/igor.jpg" width="270" alt="Фото пользователя">
+                    <div class="team__details">
+                    <p class="team__name">Игорь Демьяненко</p>
+                    <p class="team__description">Product Designer</p>
                     </div>
-                    <ul class="person-soc-list">
-                        <li class="person-soc-item">
-                            <a class="person-soc-link button" href="">
-                                <svg class="person-soc-icon" width="20" height="20">
+                    <ul class="team__soc-list">
+                        <li class="team__soc-item">
+                            <a class="team__soc-link button" href="">
+                                <svg class="team__soc-icon" width="20" height="20">
                                     <use 
                                         href="./images/symbol-defs.svg#icon-instagram">
                                     </use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="person-soc-item">
-                            <a class="person-soc-link button" href="">
-                                <svg class="person-soc-icon" width="20" height="20">
+                        <li class="team__soc-item">
+                            <a class="team__soc-link button" href="">
+                                <svg class="team__soc-icon" width="20" height="20">
                                     <use 
                                         href="./images/symbol-defs.svg#icon-twitter">
                                     </use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="person-soc-item">
-                            <a class="person-soc-link button" href="">
-                                <svg class="person-soc-icon" width="20" height="20">
+                        <li class="team__soc-item">
+                            <a class="team__soc-link button" href="">
+                                <svg class="team__soc-icon" width="20" height="20">
                                     <use 
                                         href="./images/symbol-defs.svg#icon-facebook">
                                     </use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="person-soc-item">
-                            <a class="person-soc-link button" href="">
-                                <svg class="person-soc-icon" width="20" height="20">
+                        <li class="team__soc-item">
+                            <a class="team__soc-link button" href="">
+                                <svg class="team__soc-icon" width="20" height="20">
                                     <use 
                                         href="./images/symbol-defs.svg#icon-linkedin">
                                     </use>
@@ -189,43 +190,43 @@
                     </ul>
                 </li>
             <!--Olha-->
-                <li class="person">
-                    <img class="person-image" src="images/olga.jpg" width="270" alt="Фото пользователя">
-                    <div class="person-details">
-                    <p class="person-name">Ольга Репина</p>
-                    <p class="person-description">Frontend Developer</p>
+                <li class="team__item">
+                    <img class="team__image" src="images/olga.jpg" width="270" alt="Фото пользователя">
+                    <div class="team__details">
+                    <p class="team__name">Ольга Репина</p>
+                    <p class="team__description">Frontend Developer</p>
                     </div>
-                    <ul class="person-soc-list">
-                        <li class="person-soc-item">
-                            <a class="person-soc-link button" href="">
-                                <svg class="person-soc-icon" width="20" height="20">
+                    <ul class="team__soc-list">
+                        <li class="team__soc-item">
+                            <a class="team__soc-link button" href="">
+                                <svg class="team__soc-icon" width="20" height="20">
                                     <use 
                                         href="./images/symbol-defs.svg#icon-instagram">
                                     </use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="person-soc-item button">
-                            <a class="person-soc-link" href="">
-                                <svg class="person-soc-icon" width="20" height="20">
+                        <li class="team__soc-item button">
+                            <a class="team__soc-link" href="">
+                                <svg class="team__soc-icon" width="20" height="20">
                                     <use 
                                         href="./images/symbol-defs.svg#icon-twitter">
                                     </use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="person-soc-item button">
-                            <a class="person-soc-link" href="">
-                                <svg class="person-soc-icon" width="20" height="20">
+                        <li class="team__soc-item button">
+                            <a class="team__soc-link" href="">
+                                <svg class="team__soc-icon" width="20" height="20">
                                     <use 
                                         href="./images/symbol-defs.svg#icon-facebook">
                                     </use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="person-soc-item button">
-                            <a class="person-soc-link" href="">
-                                <svg class="person-soc-icon" width="20" height="20">
+                        <li class="team__soc-item button">
+                            <a class="team__soc-link" href="">
+                                <svg class="team__soc-icon" width="20" height="20">
                                     <use 
                                         href="./images/symbol-defs.svg#icon-linkedin">
                                     </use>
@@ -235,43 +236,43 @@
                     </ul>
                 </li>
             <!--Mukhola-->
-                <li class="person">
-                    <img class="person-image" src="images/nikolai.jpg" width="270" alt="Фото пользователя">
-                    <div class="person-details">
-                    <p class="person-name">Николай Тарасов</p>
-                    <p class="person-description">Marketing</p>
+                <li class="team__item">
+                    <img class="team__image" src="images/nikolai.jpg" width="270" alt="Фото пользователя">
+                    <div class="team__details">
+                    <p class="team__name">Николай Тарасов</p>
+                    <p class="team__description">Marketing</p>
                     </div>
-                    <ul class="person-soc-list">
-                        <li class="person-soc-item">
-                            <a class="person-soc-link button" href="">
-                                <svg class="person-soc-icon" width="20" height="20">
+                    <ul class="team__soc-list">
+                        <li class="team__soc-item">
+                            <a class="team__soc-link button" href="">
+                                <svg class="team__soc-icon" width="20" height="20">
                                     <use 
                                         href="./images/symbol-defs.svg#icon-instagram">
                                     </use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="person-soc-item">
-                            <a class="person-soc-link button" href="">
-                                <svg class="person-soc-icon" width="20" height="20">
+                        <li class="team__soc-item">
+                            <a class="team__soc-link button" href="">
+                                <svg class="team__soc-icon" width="20" height="20">
                                     <use 
                                         href="./images/symbol-defs.svg#icon-twitter">
                                     </use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="person-soc-item">
-                            <a class="person-soc-link button" href="">
-                                <svg class="person-soc-icon" width="20" height="20">
+                        <li class="team__soc-item">
+                            <a class="team__soc-link button" href="">
+                                <svg class="team__soc-icon" width="20" height="20">
                                     <use 
                                         href="./images/symbol-defs.svg#icon-facebook">
                                     </use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="person-soc-item">
-                            <a class="person-soc-link button" href="">
-                                <svg class="person-soc-icon" width="20" height="20">
+                        <li class="team__soc-item">
+                            <a class="team__soc-link button" href="">
+                                <svg class="team__soc-icon" width="20" height="20">
                                     <use 
                                         href="./images/symbol-defs.svg#icon-linkedin">
                                     </use>
@@ -281,43 +282,43 @@
                     </ul>
                 </li>
             <!--Mikhailo-->
-                <li class="person">
-                    <img class="person-image" src="images/mikhail.jpg" width="270" alt="Фото пользователя">
-                    <div class="person-details">
-                    <p class="person-name">Михаил Ермаков</p>
-                    <p class="person-description">UI Designer</p>
+                <li class="team__item">
+                    <img class="team__image" src="images/mikhail.jpg" width="270" alt="Фото пользователя">
+                    <div class="team__details">
+                    <p class="team__name">Михаил Ермаков</p>
+                    <p class="team__description">UI Designer</p>
                     </div>
-                    <ul class="person-soc-list">
-                        <li class="person-soc-item">
-                            <a class="person-soc-link button" href="">
-                                <svg class="person-soc-icon" width="20" height="20">
+                    <ul class="team__soc-list">
+                        <li class="team__soc-item">
+                            <a class="team__soc-link button" href="">
+                                <svg class="team__soc-icon" width="20" height="20">
                                     <use 
                                         href="./images/symbol-defs.svg#icon-instagram">
                                     </use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="person-soc-item">
-                            <a class="person-soc-link button" href="">
-                                <svg class="person-soc-icon" width="20" height="20">
+                        <li class="team__soc-item">
+                            <a class="team__soc-link button" href="">
+                                <svg class="team__soc-icon" width="20" height="20">
                                     <use 
                                         href="./images/symbol-defs.svg#icon-twitter">
                                     </use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="person-soc-item">
-                            <a class="person-soc-link button" href="">
-                                <svg class="person-soc-icon" width="20" height="20">
+                        <li class="team__soc-item">
+                            <a class="team__soc-link button" href="">
+                                <svg class="team__soc-icon" width="20" height="20">
                                     <use 
                                         href="./images/symbol-defs.svg#icon-facebook">
                                     </use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="person-soc-item">
-                            <a class="person-soc-link button" href="">
-                                <svg class="person-soc-icon" width="20" height="20">
+                        <li class="team__soc-item">
+                            <a class="team__soc-link button" href="">
+                                <svg class="team__soc-icon" width="20" height="20">
                                     <use 
                                         href="./images/symbol-defs.svg#icon-linkedin">
                                     </use>
